      it will be set. 
  b - TRQ-3039. Fix a deadlock when deleting a job where other jobs have after any dependencies
      on the first job.
  f - TRQ-2782. Distribute job files into subdirectories when server attribute use_jobs_subdirs
      set to true. Default is false (do not distribute job files).
  b - TRQ-3116. Make qsub only retry on transient errors.

5.0.2
  b - TRQ-3029. Make it so that pbs_server can't have active threads when the main
      thread exits.
  b - TRQ-3012. Fix memory leaks that happen each time a job is run.
  b - TRQ-2966. Improved job rerun speed which had been significantly slowed down
      starting in 4.2.6. Also, pbs_mom now correctly accounts for job resources when
      user jobs call setsid more than once.
  c - TRQ-2987. Fix a crash around job exits due to incorrect error code handling.
  b - TRQ-2841. Fix some ways that max_user_queuable can become incorrect
  b - TRQ-3097. Fixed a problem where failed job submissions would count against
      the max_user_queuable count and could not be cleared until pbs_server
      was restarted.
  b - TRQ-3087. Fixed a problem where completed jobs were counted against max_user_queuable
      when restarting pbs_server. Also if the max_user_queuable was set on a
      queue and the number of queued jobs and completed jobs were over the
      maximum then the last jobs submitted would not get loaded.
 

5.0.1.h2
  b - Reverted a change in 5.0.0 which made it so a user could not submit a
      job from a node which had been allowed using the acl_hosts list. The
      change to 5.0.0 made it so the ruserok call could not be made to check
      for user authorization.
>>>>>>> f1dbf77... TRQ-3039. Fix a problem deleting jobs with afterany dependencies.

5.0.1
  e - TRQ-2410. Improved qstat behavior in cases where bad job IDs were referenced
      in the command.
  e - TRQ-2460. Two new fields were added to the accounting file for completed jobs: